Customized React Router, improved UX, added the ability to place orders

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,45 +29,36 @@ header {
   p {
     margin: 0;
   }
+
+  .headerRight {
+    li {
+      display: flex;
+      align-items: center;
+    }
+
+    a {
+      display: flex;
+    }
+
+    img {
+      margin-right: 8px;
+    }
+
+    .totalPrice {
+      font-weight: 600;
+    }
+
+    span {
+      font-size: 14px;
+      font-weight: 400;
+      color: rgb(92, 92, 92);
+    }
+  }
 }
 
 .content {
   h1 {
     margin: 0;
-  }
-}
-
-.card {
-  border: 1px solid #f3f3f3;
-  padding: 30px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
-  &:hover {
-    box-shadow: 0px 20px 35px 0px rgba(0, 0, 0, 0.06);
-    transform: translateY(-5px);
-  }
-
-  .favorite {
-    position: absolute;
-    cursor: pointer;
-  }
-
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-
-  b {
-    font-size: 13px;
-  }
-
-  h5 {
-    font-weight: 400;
-    font-size: 14px;
   }
 }
 
@@ -85,43 +76,21 @@ header {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 15px;
+    width: 18px;
+    height: 18px;
+    top: 14px;
+  }
 
   input {
     border: 0;
     padding: 13px;
     font-size: 16px;
     width: 200px;
-  }
-}
-
-.overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
-.drawer {
-  position: absolute;
-  width: 420px;
-  background: #ffffff;
-  right: 0;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  height: 100%;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-
-  .items {
-    overflow: auto;
-    margin-bottom: 40px;
-  }
-
-  h2 {
-    margin: 0;
   }
 }
 
@@ -147,7 +116,10 @@ header {
 
   .greenButton {
     position: relative;
-
+    &:disabled {
+      background-color: #bebebe;
+      animation: button-loading 0.6s ease-in-out infinite;
+    }
     &:hover {
       img {
         transform: translateX(5px);
@@ -157,6 +129,36 @@ header {
       position: absolute;
       right: 30px;
       top: 20px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+.cartTitle {
+  margin: 0;
+}
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
       transition: transform 0.15s ease-in-out;
     }
   }
@@ -173,7 +175,6 @@ header {
   font-weight: 500;
   cursor: pointer;
   transition: background 0.1s ease-in-out;
-
   &:hover {
     background: lighten(#9dd458, 5%);
   }
@@ -219,5 +220,42 @@ header {
     &:hover {
       opacity: 1;
     }
+  }
+}
+
+.order-wrapper {
+  width: 100%;
+  padding: 18px;
+  border-radius: 40px;
+  margin-bottom: 20px;
+}
+
+.order-number {
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+.orders {
+  flex-wrap: wrap;
+  div {
+    margin-right: 21px;
+  }
+}
+
+.description {
+  margin: 0;
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.7;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
